--- a/ClientApp/src/app/components/artist-listing-applications/artist-listing-applications.component.scss
+++ b/ClientApp/src/app/components/artist-listing-applications/artist-listing-applications.component.scss
@@ -1,46 +1,9 @@
-.date-container {
-    text-align: center;
-    font-weight: bold;
-    flex-shrink: 0;
-    margin: 0 16px;
-  
-    .date {
-      font-size: 1.8rem;
-      color: #222;
-      line-height: 1;
-      margin: 0;
-    }
-  
-    .month {
-      font-size: 0.85rem;
-      color: #888;
-      margin: 0;
-    }
+.container {
+  container-type: inline-size;
+}
+
+@container (width < 700px) {
+  .btn-label {
+    display: none;
   }
-  
-  .info {
-    flex-grow: 1;
-  
-    .name {
-      font-size: 1.2rem;
-      font-weight: 600;
-      margin-bottom: 4px;
-      color: var(--primary-color);
-    }
-  
-    .nested-info {
-      display: flex;
-      align-items: center;
-      flex-wrap: wrap;
-      gap: 12px;
-  
-      .icon-text {
-        color: #444;
-        font-size: 0.95rem;
-        display: flex;
-        align-items: center;
-        gap: 4px;
-      }
-    }
-  }
-  
+}
