--- a/ClientApp/src/app/pages/listing-applications/listing-applications.component.scss
+++ b/ClientApp/src/app/pages/listing-applications/listing-applications.component.scss
@@ -1,13 +1,13 @@
 .container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr, auto)); 
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); // or 400px if you want
     gap: 1.5rem;
     max-width: 1000px;
-    margin: 0 auto; 
+    margin: 0 auto;
     padding: 2rem;
-    justify-content: start;
-    min-height: 100vh;
-}
+    align-items: start; /* important! */
+  }
+  
   
 .item {
     display: flex;
