--- a/ClientApp/src/app/components/profile-details/profile-details.component.html
+++ b/ClientApp/src/app/components/profile-details/profile-details.component.html
@@ -1,21 +1,35 @@
 <div class="container" *ngIf="user">
-    <div class="flex items-center gap-2">
-        <label>Email:</label>
-        <app-text [(content)]="user.email" [editMode]="editMode" (contentChange)="onChangeDetected()"></app-text>
-    </div>  
-    <div class="flex items-center gap-2">
-        <label>Password:</label>
-        <button mat-button color="primary" (click)="onChangePassword()">
-          Reset Password
-        </button>
-    </div>  
-    <app-location-display
-        *ngIf="user"
+    <div class="form-row">
+      <label>Email:</label>
+      <app-text
+        [(content)]="user.email"
         [editMode]="editMode"
-        [latitude]="user.latitude"
-        [longitude]="user.longitude"
-        [county]="user.county"
-        [town]="user.town"
-        (latLongChange)="updateLatLong($event)">
+        (contentChange)="onChangeDetected()">
+      </app-text>
+    </div>  
+  
+    <div class="form-row">
+      <label>Password:</label>
+      <button mat-button color="primary" (click)="onChangePassword()">
+        Reset Password
+      </button>
+    </div>  
+  
+    <div class="form-row">
+      <button mat-flat-button color="primary" (click)="onMyLocation()">
+        <mat-icon>my_location</mat-icon>
+        Use My Location
+      </button>  
+    </div>
+  
+    <app-location-display
+      *ngIf="user"
+      [editMode]="editMode"
+      [latitude]="user.latitude"
+      [longitude]="user.longitude"
+      [county]="user.county"
+      [town]="user.town"
+      (latLongChange)="updateLatLong($event)">
     </app-location-display>
-</div>
+  </div>
+  
