--- a/ClientApp/src/app/components/filter/filter.component.scss
+++ b/ClientApp/src/app/components/filter/filter.component.scss
@@ -47,7 +47,7 @@
     min-width: 150px; /* Set a minimum width to avoid shrinking */
   }
 
-.wrapper {
+.sidebar-container {
     padding: 16px;
 }
 
