--- a/ClientApp/src/app/pages/event-details/event-details.component.html
+++ b/ClientApp/src/app/pages/event-details/event-details.component.html
@@ -13,7 +13,7 @@
           <mat-card-content>
             <div class="warning-content icon-text">
               <mat-icon color="warn">warning</mat-icon>
-              <span class="text">Please set appropriate fields to post Event</span>
+              <span class="text">Please set both the Total Tickets and Ticket Price to post Event</span>
             </div>
           </mat-card-content>
         </mat-card>
