--- a/ClientApp/src/app/components/genres/genres.component.html
+++ b/ClientApp/src/app/components/genres/genres.component.html
@@ -1,7 +1,7 @@
 <p class="genres icon-text">
     <mat-icon small>music_note</mat-icon>
     <span *ngFor="let genre of genres; let last = last">
-      {{ genre.name }}<ng-container *ngIf="!last">, </ng-container>
+      {{ genre.name }}<ng-container *ngIf="!last">,&nbsp;</ng-container>
     </span>
-  </p>
+</p>
   
