--- a/ClientApp/src/app/components/listings/listings.component.html
+++ b/ClientApp/src/app/components/listings/listings.component.html
@@ -18,11 +18,7 @@
             </p>
           </div>
   
-          <p class="genres icon-text">
-            <mat-icon small>music_note</mat-icon>
-            <strong class="mr-[5px]">Genres:</strong>
-            <span *ngFor="let genre of listing.genres" class="genres">{{ genre.name }}, </span>
-          </p>
+          <app-genres [genres]="listing.genres"/>
         </div>
   
         <div class="actions">
